--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "alchemy-sdk": "^2.10.1",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
-    "ethers": "^6.7.1"
+    "ethers": "^6.7.1",
+    "request": "^2.88.2"
   }
 }
