--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "ethers": "^6.7.1",
+    "puppeteer": "^21.3.6",
     "request": "^2.88.2"
   }
 }
